Client Fixes